Quick tweak to fix position of reload button on firefox

--- a/inst/ui-editor-react/src/components/AppPreview/AppPreview.module.css
+++ b/inst/ui-editor-react/src/components/AppPreview/AppPreview.module.css
@@ -143,6 +143,7 @@ div.appViewerHolder {
 }
 
 .reloadButton {
+  height: var(--header-height);
   top: 0;
   left: 0;
   bottom: 0;
